# CloudSizer

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  agent_system_main.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.venv12/: pyvenv.cfg
agents/: __init__.py  dq_agent.py  error_agent.py  scheduler_agent.py
app/: __init__.py  db.py  env.py  main.py  models.py  settings.py
data-platform/: .gitignore  README.md  package.json  turbo.json
data-platform/apps/api/: alembic.ini  pyproject.toml
data-platform/apps/api/alembic/: env.py
data-platform/apps/api/app/: __init__.py  main.py  seed.py
data-platform/apps/api/app/api/routers/: __init__.py  health.py  pipelines.py  repos.py  runs.py  toon.py
data-platform/apps/api/app/core/: config.py
data-platform/apps/api/app/db/: base.py  session.py
data-platform/apps/api/app/execution/: __init__.py  compiler.py  dispatcher.py  mock_runner.py  scheduler.py
data-platform/apps/api/app/models/: entities.py
data-platform/apps/api/app/repositories/: __init__.py  pipeline_repository.py  repo_repository.py  run_repository.py
data-platform/apps/api/app/schemas/: __init__.py  common.py  pipeline.py  repo.py  run.py  toon.py
data-platform/apps/api/app/services/: __init__.py  pipeline_service.py  repo_service.py  run_service.py  toon.py  validation_service.py
data-platform/apps/api/tests/: test_pipeline_validation_api.py  test_toon_api.py
docs/: noodle-test-matrix.md
frontend/: .env.example  .eslintignore  Dockerfile  README.md  package-lock.json  package.json  (+1 more)
(+452 files in other folders)
