[project]
name = "cloudsizer"
version = "0.1.0"
description = "CloudSizer backend"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.23.0",
    "boto3==1.42.89",
    "fastapi>=0.115.0",
    "google-cloud-storage>=2.18.0",
    "oracledb>=2.2.1",
    "PyMySQL>=1.1.1",
    "httpx>=0.28.1",
    "pydantic>=2.10.0",
    "pyodbc>=5.1.0",
    "psycopg[binary]>=3.2.0",
    "snowflake-connector-python>=3.12.0",
    "sqlalchemy>=2.0.36",
    "pyjwt>=2.10.1",
    "uvicorn>=0.34.0",
]
