[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-platform-api"
version = "0.1.0"
description = "FastAPI control plane for the data platform monorepo."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "croniter>=2.0.7",
  "fastapi>=0.115.4",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
  "psycopg[binary]>=3.2.3",
  "redis>=5.2.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3"
]

[tool.setuptools.packages.find]
where = ["."]
